--- a/window-icon/English.lproj/InfoPlist.strings
+++ b/window-icon/English.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-﻿/* Localized versions of Info.plist keys */CFBundleName = "Window Icon";CFBundleShortVersionString = "1.0";CFBundleGetInfoString = "Window Icon version 1.0, Copyright 2016 miyako.";
+/* Localized versions of Info.plist keys */CFBundleName = "Window Icon";CFBundleShortVersionString = "2.0";CFBundleGetInfoString = "Window Icon version 2.0, Copyright 2019 miyako.";
